--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-JWT_KEY=secret
+Mongo_URL = 'mongodb+srv://maha:mongodb1@cluster0.3mnj5.mongodb.net/e-commerce?retryWrites=true&w=majority'
+JWT_KEY='secret'
+Port = 3000
