--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.2",
+    "module-alias": "^2.2.2",
     "mongoose": "^6.6.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -46,6 +48,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/module-alias": "^2.0.1",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
@@ -65,6 +68,12 @@
     "tsconfig-paths": "4.1.0",
     "typescript": "^4.7.4"
   },
+  "_moduleAliases": {
+    "@root": "src",
+    "@Auth": "src/auth",
+    "@User": "src/user",
+    "@Product": "src/product"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
@@ -80,6 +89,9 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@root/(.*)$": "<rootDir>/../src/$1"
+    }
   }
 }
