--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@root/*": ["src/*"],
+      "@Auth/*": ["src/auth/*"],
+      "@User/*": ["src/user/*"],
+      "@Product/*": ["src/product/*"],
+    }
   }
 }
