--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 Mongo_URL = 'mongodb+srv://maha:mongodb1@cluster0.3mnj5.mongodb.net/e-commerce?retryWrites=true&w=majority'
 JWT_KEY='secret'
 Port = 3000
+Server = app.getHttpServer()
